# iucom

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
src/iucom/: gunicorn.conf.py
src/iucom/api/: application.py  error_handlers.py
src/iucom/api/endpoints/: __init__.py
src/iucom/api/endpoints/chats/: schemas.py  views.py
src/iucom/api/endpoints/courses/: schemas.py  views.py
src/iucom/api/endpoints/system/: schemas.py  views.py
src/iucom/common/: settings.py
src/iucom/common/data/repositories/: chats.py  statistics.py
src/iucom/common/data/repositories/cources/: __init__.py  mongodb.py  moodle.py
src/iucom/common/data/storages/: mongodb.py
src/iucom/common/domains/chats/: entities.py  enums.py  errors.py  interactors.py
src/iucom/common/domains/cources/: entities.py  enums.py  errors.py  interactors.py
src/iucom/common/domains/statistics/: entities.py  interactors.py
src/iucom/common/utils/: __init__.py  async_lazy_object.py  entrypoint.py
src/iucom/sync/data/repositories/: telegram.py
src/iucom/sync/data/storages/: telegram.py
src/iucom/sync/domains/telegram/: entities.py  enums.py  errors.py  interactors.py
src/iucom/sync/presenters/: main.py
